--- a/hello-react/package.json
+++ b/hello-react/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.18.3",
     "axios": "^0.24.0",
     "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
