--- a/hello-react/package.json
+++ b/hello-react/package.json
@@ -8,15 +8,18 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.18.3",
     "axios": "^0.24.0",
+    "babel-plugin-import": "^1.13.3",
+    "customize-cra": "^1.0.0",
     "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
+    "react-app-rewired": "1.6.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "2.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
